manifests/cluster-addons/tailscale-operator/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tailscale-int
  namespace: tailscale
  labels:
    external-dns: enabled
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: tailscale-int
  listeners:
    - name: http
      port: 80
      protocol: HTTP
    - name: https
      protocol: HTTPS
      port: 443
      hostname: '*.int.bakseter.net'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: tailscale-int-tls
    - name: ssh
      protocol: TCP
      port: 22
      allowedRoutes:
        kinds:
          - kind: TCPRoute
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - forgejo
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tailscale-home
  namespace: tailscale
  labels:
    external-dns: enabled
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: tailscale-home
  listeners:
    - name: http
      port: 80
      protocol: HTTP
    - name: https
      protocol: HTTPS
      port: 443
      hostname: '*.bakseter.net'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: tailscale-home-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tailscale-sre
  namespace: tailscale
  labels:
    external-dns: enabled
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: tailscale-sre
  listeners:
    - name: http
      port: 80
      protocol: HTTP
    - name: https
      protocol: HTTPS
      port: 443
      hostname: '*.sre.bakseter.net'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: tailscale-sre-tls
