manifests/cluster-addons/tailscale-operator/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-redirect-int
  namespace: tailscale
spec:
  parentRefs:
    - name: bakseter-net-gateway-int
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-redirect-home
  namespace: tailscale
spec:
  parentRefs:
    - name: bakseter-net-gateway-home
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-redirect-sre
  namespace: tailscale
spec:
  parentRefs:
    - name: bakseter-net-gateway-sre
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
