manifests/cluster-addons/tailscale-operator/templates/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: authentik-forward-auth-sre
  namespace: tailscale
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: bakseter-net-gateway-sre
  extAuth:
    failOpen: false
    timeout: 30s
    headersToExtAuth:
      - cookie
      - authorization
      - x-forwarded-for
      - x-forwarded-host
      - x-forwarded-proto
    http:
      backendRefs:
        - name: ak-outpost-envoy-gateway-sre
          namespace: authentik
          port: 9000
      headersToBackend:
        - set-cookie
        - location
        - x-authentik-username
        - x-authentik-email
        - x-authentik-groups
      path: /outpost.goauthentik.io/auth/nginx
