manifests/cluster-addons/tailscale-operator/templates/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: operator
  namespace: tailscale
spec:
  endpointSelector:
    matchLabels:
      app: operator

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP

    - toEntities:
        - world

    - toEntities:
        - host
      toPorts:
        - ports:
            - port: '1900'
              protocol: UDP
            - port: '5351'
              protocol: UDP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: technitium-proxygroup
  namespace: tailscale
spec:
  endpointSelector:
    matchLabels:
      tailscale.com/managed: 'true'
      tailscale.com/parent-resource: technitium
      tailscale.com/parent-resource-type: proxygroup

  ingress:
    - fromEntities:
        - world
      icmps:
        - fields:
            - type: '8'

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP

    - toEntities:
        - world

    - toEntities:
        - host
      toPorts:
        - ports:
            - port: '1900'
              protocol: UDP
            - port: '5351'
              protocol: UDP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: technitium
            app.kubernetes.io/name: technitium
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-proxygroup
  namespace: tailscale
spec:
  endpointSelector:
    matchLabels:
      tailscale.com/managed: 'true'
      tailscale.com/parent-resource: envoy-gateway
      tailscale.com/parent-resource-type: proxygroup

  ingress:
    - fromEntities:
        - world
      icmps:
        - fields:
            - type: '8'

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP

    - toEntities:
        - world

    - toEntities:
        - host
      toPorts:
        - ports:
            - port: '1900'
              protocol: UDP
            - port: '5351'
              protocol: UDP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: tailscale-home
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: tailscale-int
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: tailscale-sre
      toPorts:
        - ports:
            - port: '10443'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: tailscale-int
      toPorts:
        - ports:
            - port: '10022'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homelab-proxygroup
  namespace: tailscale
spec:
  endpointSelector:
    matchLabels:
      tailscale.com/managed: 'true'
      tailscale.com/parent-resource: homelab
      tailscale.com/parent-resource-type: proxygroup

  ingress:
    - fromEntities:
        - world
      icmps:
        - fields:
            - type: '8'

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP

    - toEntities:
        - world

    - toEntities:
        - host
      toPorts:
        - ports:
            - port: '1900'
              protocol: UDP
            - port: '5351'
              protocol: UDP
