manifests/cluster-addons/tailscale-operator/templates/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: operator
  namespace: tailscale
spec:
  endpointSelector:
    matchLabels:
      app: operator

  ingress: []

  egress:
    - toEntities:
        - world

    - toEntities:
        - host
      toPorts:
        - ports:
            - port: '1900'
              protocol: UDP
            - port: '5351'
              protocol: UDP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - rules:
            http: []
          ports:
            - port: '53'
              protocol: TCP
            - port: '53'
              protocol: UDP

    - toEntities:
        - kube-apiserver
      toPorts:
        - rules:
            http: []
          ports:
            - port: '6443'
              protocol: TCP

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ts-ingress
  namespace: tailscale
spec:
  endpointSelector:
    matchLabels:
      tailscale.com/managed: 'true'
      tailscale.com/parent-resource-type: ingress

  ingress: []

  egress:
    - toEntities:
        - world

    - toEntities:
        - host
      toPorts:
        - ports:
            - port: '1900'
              protocol: UDP
            - port: '5351'
              protocol: UDP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - rules:
            http: []
          ports:
            - port: '53'
              protocol: TCP
            - port: '53'
              protocol: UDP

    - toEndpoints:
        - matchExpressions:
            - key: 'k8s:io.kubernetes.pod.namespace'
              operator: Exists
